[gd_scene load_steps=20 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://region.tscn" type="PackedScene" id=2]
[ext_resource path="res://planet.gd" type="Script" id=3]
[ext_resource path="res://camera.gd" type="Script" id=4]
[ext_resource path="res://Icons/keyboard_key_left.png" type="Texture" id=5]
[ext_resource path="res://Icons/keyboard_key_down.png" type="Texture" id=6]
[ext_resource path="res://Icons/keyboard_key_right.png" type="Texture" id=7]
[ext_resource path="res://Icons/keyboard_key_up.png" type="Texture" id=8]
[ext_resource path="res://sun.gd" type="Script" id=9]
[ext_resource path="res://Fonts/IBM_Plex_Mono/IBMPlexMono-Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Fonts/IBM_Plex_Mono/IBMPlexMono-ExtraLight.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Icons/keyboard_key_d.png" type="Texture" id=12]
[ext_resource path="res://Icons/keyboard_key_c.png" type="Texture" id=13]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0.203922, 1, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 1, 0.0392157, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0.890196, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 29
font_data = ExtResource( 11 )

[node name="world" type="Spatial"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="sun" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 0.341758, -0.939788, 0, 0.939788, 0.341758, 0, 0, 0, 1, 3.4631, 1.0819, -4.16805 )
script = ExtResource( 9 )

[node name="planet" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CSGSphere" type="CSGSphere" parent="planet"]
transform = Transform( 0.913299, -0.0762811, 0.400083, 0.0642637, 0.996989, 0.0433897, -0.402188, -0.013917, 0.915452, 0, 0, 0 )

[node name="Blue" parent="planet" groups=["nodes"] instance=ExtResource( 2 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 1.11926, 0, 0 )
material = SubResource( 2 )

[node name="Red" parent="planet" groups=["nodes"] instance=ExtResource( 2 )]
transform = Transform( 0.146744, 0, -0.135891, 0, 0.2, 0, 0.135891, 0, 0.146744, -1.08376, 0, 0 )
material = SubResource( 3 )

[node name="Green" parent="planet" groups=["nodes"] instance=ExtResource( 2 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 1.04264 )
material = SubResource( 4 )

[node name="Yellow" parent="planet" groups=["nodes"] instance=ExtResource( 2 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, -1.06655 )
material = SubResource( 5 )

[node name="camera" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="camera"]
transform = Transform( -0.989681, 0, -0.143285, 0, 1, 0, 0.143285, 0, -0.989681, -0.524644, 0.631394, -4 )

[node name="question_arrows" type="Node2D" parent="."]

[node name="ArrowRight" type="Sprite" parent="question_arrows"]
position = Vector2( 200, 325 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="ArrowUp" type="Sprite" parent="question_arrows"]
position = Vector2( 500, 125 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )

[node name="ArrowDown" type="Sprite" parent="question_arrows"]
position = Vector2( 500, 500 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
offset = Vector2( 0, 100 )

[node name="ArrowLeft" type="Sprite" parent="question_arrows"]
position = Vector2( 790, 325 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="KeyC" type="Sprite" parent="question_arrows"]
position = Vector2( 790, 324 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )

[node name="KeyD" type="Sprite" parent="question_arrows"]
position = Vector2( 201, 325 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )

[node name="Text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -253.0
margin_top = -298.0
margin_right = 257.0
margin_bottom = -199.0
rect_rotation = -0.158866
rect_scale = Vector2( 0.98483, 1.05104 )
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="action" type="Label" parent="Text"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -255.0
margin_right = 255.0
margin_bottom = 99.0
rect_rotation = -0.158866
rect_scale = Vector2( 0.98483, 1.05104 )
custom_fonts/font = SubResource( 6 )
text = "Choose an action!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Label" parent="Text"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -285.0
margin_right = 285.0
margin_bottom = 99.0
rect_rotation = -0.158866
rect_scale = Vector2( 0.98483, 1.05104 )
custom_fonts/font = SubResource( 6 )
text = "Choose a direction!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice" type="Label" parent="Text"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -315.0
margin_right = 315.0
margin_bottom = 99.0
rect_rotation = -0.158866
rect_scale = Vector2( 0.98483, 1.05104 )
custom_fonts/font = SubResource( 6 )
text = "Choose: move or play?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coop" type="Label" parent="Text"]
margin_left = -135.103
margin_top = 361.198
margin_right = 17.8974
margin_bottom = 399.198
custom_fonts/font = SubResource( 7 )
text = "Cooperate"

[node name="Defect" type="Label" parent="Text"]
margin_left = 478.193
margin_top = 364.694
margin_right = 631.193
margin_bottom = 402.694
custom_fonts/font = SubResource( 7 )
text = "Defect"

[node name="movechoice" type="Label" parent="Text"]
margin_left = -105.656
margin_top = 361.274
margin_right = 47.344
margin_bottom = 399.274
custom_fonts/font = SubResource( 7 )
text = "Move"

[node name="actionchoice" type="Label" parent="Text"]
margin_left = 493.424
margin_top = 364.734
margin_right = 646.424
margin_bottom = 402.734
custom_fonts/font = SubResource( 7 )
text = "Action"

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
